dlan-usb-extender-3rd-party: fix typos and acronyms in files and HOWTO

--- a/foot/files/foot.config
+++ b/foot/files/foot.config
@@ -3,5 +3,5 @@ config foot
 	option media_type 2252	# continental europe
 	#option media_type 2253 # UK
 	option hpmac	00:11:22:33:44:56
-	option dak	"00001111222233334444"
-	option nmk	"HomePlugAV"
+	option dpw	"00001111222233334444"
+	option npw	"HomePlugAV"
