--- a/foot/files/foot.config
+++ b/foot/files/foot.config
@@ -3,5 +3,5 @@ config foot
 	option media_type 2252	# continental europe
 	#option media_type 2253 # UK
 	option hpmac	00:11:22:33:44:56
-	option dpw	"00001111222233334444"
+	option dpw	"0000-1111-2222-3333"
 	option npw	"HomePlugAV"
