wmbus-repeater: add a new mode to retain the Amber wireless USB adapter mode

--- a/wmbus-repeater/files/wmbus-repeater.config
+++ b/wmbus-repeater/files/wmbus-repeater.config
@@ -1,4 +1,4 @@
 config wmbus-repeater
 	option device "/dev/ttyUSB0"
 	option interface "eth0"
-	option mode "S1"	# S1, S2, T1meter, T1other, T2meter, T2other
+	option mode "S1"	# S1, S2, T1meter, T1other, T2meter, T2other, retain
